--- a/V3-glass/css/main.css
+++ b/V3-glass/css/main.css
@@ -49,6 +49,7 @@ body {
     right: 0;
     bottom: 0;
     overflow: hidden;
+    z-index: 1;
   }
   
   .overlay::before {
@@ -209,6 +210,7 @@ body {
     width: 100%;
     height: 100%;
     position: relative;
+    z-index: 2;
 }
 
 #disk {
@@ -249,6 +251,7 @@ body {
 
 #logo a {
     width: 50%;
+    z-index: 2;
 }
 
 #logo img {
